2012-09-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/resample.c
    Fix valgrind warning.

2012-09-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Remove un-needed AC_LANG_SOURCE statement. Thanks to Robin Gareus.

2012-07-24  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/common.c
    Fix minor bug in sfx_mix_mono_read_double(). Patch from Martin Guy. Thanks.

2012-02-25  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * M4/extra_pkg.m4
    Update PKG_CHECK_MOD_VERSION macro to add an AC_TRY_LINK step. This fix
    allows the configure process to catch attempts to link incompatible
    libraries. For example, linking 32 bit version of eg libFLAC to a 64 bit
    version of sndfile-tools will now fail at the configure stage.

2011-01-14  Robin Gareus  <robin@gareus.org>

    * src/waveform.c
    added sndfile-waveform, a waveform image generator

2011-01-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/jackplay.c
    Improve reporting of loop count.

2011-01-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*.[ch]
    Update copyright years.

    * src/jackplay.c
    Add ability to play a file in a loop.

    * man/sndfile-jackplay.1
    Update with new options.

2011-01-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add AM_SILENT_RULES and other tweaks.

    * src/common.c
    Fix bug in sfx_mix_mono_read_double() where a bunch of crap got appended to
    the end of the mixed down file. Thanks to Tom Szilagyi for the bug report.
    Remove cruft.

2010-04-07  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/jackplay.c
    Use jack_client_open() instead of deprecated jack_client_new().

    * man/sndfile-spectrogram.1
    Fix two typos reported by Igor Murzov.

2010-02-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Detect presence of libsamplerate.

    * src/resample.c Makefile.am