@@ -50,4 +50,5 @@ src_sndfile_pitch_infer_LDADD = $(SNDFILE_LIBS) $(FFTW3_LIBS)
 src_kaiser_window_test_SOURCES = src/kaiser_window_test.c src/window.h src/window.c
 
 check : $(noinst_PROGRAMS) $(bin_PROGRAMS)
-	src/kaiser_window_test
+	@src/kaiser_window_test
+	@tests/valgrind-test.sh
